# java-design-pattern

./: LICENCE  pyproject.toml  readme.md
chap_10/: enumtest.py  strategy.py
chap_11/: composite.py
chap_12/: decorator.py
chap_13/: visitor.py
chap_19/: state.py  tktest.py
chap_2/: adapter.py  adapter_1.py  adapter_2.py  experiment_1.py
chap_3/: template_method.py
chap_4/: factory_method.py
chap_5/: my_singleton.py  sample_1.py  singleton.py
chap_6/: prototype.py  tips.py
chap_7/: builder.py
chap_9/: A1.py  A2.py  A2.txt  A3.py  bridge.py
test/: proptest.py
