[tool.poetry]
name = "java-design-pattern"
version = "0.1.0"
description = ""
authors = ["t_ueda <74095322+Tatsuya-Ueda@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "java_design_pattern"}]

[tool.poetry.dependencies]
python = "^3.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
